--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,9 @@ environment:
 
 dependencies:
   meta: ^1.16.0
-  hive_ce: ^2.10.1
-  rxdart: ^0.28.0
-  synchronized: ^3.1.0+1
+  hive_ce: ">=2.10.1 <3.0.0"
+  rxdart: ">=0.28.0 <1.0.0"
+  synchronized: ">=3.1.1 <4.0.0"
 
 dev_dependencies:
-  lints: ^3.0.0
-  test: ^1.24.0
+  lints: ">=4.0.0 <6.0.0"
